Fix alignment of logos partners

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -192,6 +192,7 @@ main{
 #partners{
     @extend %flex-row;
     justify-content: space-between;
+    align-items: center;
 
     img{
         width: calc(100% / 10);
